--- a/production/roles/proxy/templates/default.conf
+++ b/production/roles/proxy/templates/default.conf
@@ -18,7 +18,10 @@ server {
   client_max_body_size 0;
   # add Strict-Transport-Security to prevent man in the middle attacks
   add_header Strict-Transport-Security "max-age=31536000";
-  include /etc/nginx/snippets/snakeoil.conf;
+
+  # SSL configuration.
+  ssl_certificate {{proxy.ssl.crt_container_path}};
+  ssl_certificate_key {{proxy.ssl.key_container_path}};
   ssl_session_cache shared:SSL:1m;
   ssl_session_timeout 5m;
   ssl_ciphers HIGH:!aNULL:!MD5;
