Improved upgrade path
* Rebuild docker images when needed.
* Restart containers when needed.
* Tag docker images with the git tag when building from a tag.

--- a/production/playbook.yml
+++ b/production/playbook.yml
@@ -111,7 +111,11 @@
   become_user: root
   become_method: sudo
   tasks:
+    # Ensure all services are up.  If any needed restarting they will have been
+    # downed in the previous plays, all that needs to happen here is ensure
+    # they're up.
     - name: Start services
+      tags: always
       ansible.builtin.shell:
         chdir: "{{ct_docker_dir}}"
         cmd: |
