--- a/production/roles/cluster_builder/tasks/main.yaml
+++ b/production/roles/cluster_builder/tasks/main.yaml
@@ -7,6 +7,7 @@
     version: "{{cluster_builder.source.commitish}}"
   environment:
     GIT_TERMINAL_PROMPT: 0
+  register: cluster_builder_checkout
 
 # We need the following as the directory is owned by root, but not all git
 # commands are executed as root.
@@ -61,3 +62,8 @@
       network: host
       # http_timeout: 60
     source: build
+    state: present
+    force_source: "{{cluster_builder_checkout.changed}}"
+  notify:
+    - "Tag cluster_builder image with git tag"
+    - "Stop cluster_builder container"
