--- a/production/roles/proxy/tasks/main.yaml
+++ b/production/roles/proxy/tasks/main.yaml
@@ -10,16 +10,25 @@
   ansible.builtin.template:
     src: default.conf
     dest: "{{proxy.install_dir}}/nginx/conf.d/default.conf"
+  notify:
+    - "Build docker image"
+    - "Stop proxy container"
 
 - name: Install nginx reverse proxy configuration
   ansible.builtin.copy:
     src: nginx
     dest: "{{proxy.install_dir}}/"
+  notify:
+    - "Build docker image"
+    - "Stop proxy container"
 
 - name: Install nginx reverse proxy Dockerfile
   ansible.builtin.template:
     src: Dockerfile
     dest: "{{proxy.install_dir}}/"
+  notify:
+    - "Build docker image"
+    - "Stop proxy container"
 
 - name: Install SSL certificates
   block:
@@ -40,14 +49,6 @@
         privatekey_path: "{{proxy.install_dir}}/{{proxy.ssl.key_host_path}}"
         provider: selfsigned
         state: present
-
-- name: Build docker image
-  community.docker.docker_image:
-    name: "{{proxy.docker_image.name}}"
-    build:
-      path: "{{proxy.install_dir}}"
-      dockerfile: "{{proxy.docker_image.dockerfile | default('Dockerfile')}}"
-      args: "{{proxy.docker_image.args | default({})}}"
-      network: host
-      # http_timeout: 60
-    source: build
+      notify:
+        - "Build docker image"
+        - "Stop proxy container"
