--- a/production/roles/metric_reporting_daemon/tasks/main.yaml
+++ b/production/roles/metric_reporting_daemon/tasks/main.yaml
@@ -7,6 +7,7 @@
     version: "{{metric_reporting_daemon.source.commitish}}"
   environment:
     GIT_TERMINAL_PROMPT: 0
+  register: metric_reporting_daemon_checkout
 
 # We need the following as the directory is owned by root, but not all git
 # commands are executed as root.
@@ -43,3 +44,8 @@
       network: host
       # http_timeout: 60
     source: build
+    state: present
+    force_source: "{{metric_reporting_daemon_checkout.changed}}"
+  notify:
+    - "Tag metric_reporting_daemon image with git tag"
+    - "Stop metric_reporting_daemon container"
