--- a/production/roles/cluster_builder/tasks/main.yaml
+++ b/production/roles/cluster_builder/tasks/main.yaml
@@ -52,18 +52,16 @@
         state: link
       loop: "{{ query('fileglob', available_dir+'/*.yaml') }}"
 
+- name: Set git checkout and docker image facts
+  vars:
+    component: cluster_builder
+    install_dir: "{{cluster_builder.install_dir}}"
+  import_tasks: gather_git_and_docker_facts.yaml
+
 - name: Build docker image
-  community.docker.docker_image:
-    name: "{{cluster_builder.docker_image.name}}"
-    build:
-      path: "{{cluster_builder.install_dir}}"
-      dockerfile: "{{cluster_builder.docker_image.dockerfile | default('Dockerfile')}}"
-      args: "{{cluster_builder.docker_image.args | default({})}}"
-      network: host
-      # http_timeout: 60
-    source: build
-    state: present
+  vars:
+    component: cluster_builder
     force_source: "{{cluster_builder_checkout.changed}}"
-  notify:
-    - "Tag cluster_builder image with git tag"
-    - "Stop cluster_builder container"
+    notifications:
+      - "Stop cluster_builder container"
+  import_tasks: build_docker_image.yaml
