--- a/production/roles/proxy/tasks/main.yaml
+++ b/production/roles/proxy/tasks/main.yaml
@@ -11,7 +11,6 @@
     src: default.conf
     dest: "{{proxy.install_dir}}/nginx/conf.d/default.conf"
   notify:
-    - "Build docker image"
     - "Stop proxy container"
 
 - name: Install nginx reverse proxy configuration
@@ -19,7 +18,6 @@
     src: nginx
     dest: "{{proxy.install_dir}}/"
   notify:
-    - "Build docker image"
     - "Stop proxy container"
 
 - name: Install nginx reverse proxy Dockerfile
@@ -27,7 +25,6 @@
     src: Dockerfile
     dest: "{{proxy.install_dir}}/"
   notify:
-    - "Build docker image"
     - "Stop proxy container"
 
 - name: Install SSL certificates
@@ -50,5 +47,16 @@
         provider: selfsigned
         state: present
       notify:
-        - "Build docker image"
         - "Stop proxy container"
+
+- name: Build docker image
+  vars:
+    component: proxy
+    force_source: true
+    notifications:
+      - "Stop proxy container"
+    # XXX See if we can grab these from the concertim-ansible-playbook repo somehow.
+    build_version: ""
+    build_revision: ""
+    docker_image_tag: "latest"
+  import_tasks: build_docker_image.yaml
