--- a/contrib/dev/vagrant/Vagrantfile
+++ b/contrib/dev/vagrant/Vagrantfile
@@ -2,8 +2,17 @@ CT_SRC_DIR = [ ENV['FLIGHT_CODE'], "#{ENV['HOME']}/projects/concertim/src" ]
   .compact
   .map { |p| File.expand_path(p) }
   .detect { |p| File.directory?(p) }
-ANSIBLE_DIR="../ansible"
-PRODUCTION_DIR="../production"
+
+# DEV_ANSIBLE_DIR contains the path to the old ansible playbook.  The old
+# playbook is now only used to setup a development environment for developing
+# concertim components and will eventually disappear.
+DEV_ANSIBLE_DIR="../../../ansible"
+
+# PROD_ANSIBLE_DIR contains the path to the new ansible playbook.  The new
+# playbook is currently used to setup a production environment.  Eventually, it
+# will also setup an environment for developing the concertim components.
+PROD_ANSIBLE_DIR="../../../production"
+
 MACHINES = [
   {
     name: "dev1",
@@ -60,9 +69,9 @@ Vagrant.configure("2") do |config|
 
       unless to_boolean(ENV['ACCEPTANCE'])
         if ENV['BUILD_ENV'] == 'prod'
-          v.vm.synced_folder PRODUCTION_DIR, "/production"
+          v.vm.synced_folder PROD_ANSIBLE_DIR, "/ansible-prod"
         else
-          v.vm.synced_folder ANSIBLE_DIR, "/ansible"
+          v.vm.synced_folder DEV_ANSIBLE_DIR, "/ansible-dev"
           if File.directory?(CT_SRC_DIR)
             v.vm.synced_folder CT_SRC_DIR, "/opt/concertim/dev"
           end
