Move ansible dir to contrib/dev/ansible

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,8 @@
 /MIA-6-4-0-DEV.vmdk
 /tmp
 .vagrant
-/ansible/roles/*/files/tmp/*
-/ansible/secrets.enc
+/contrib/dev/ansible/roles/*/files/tmp/*
+/contrib/dev/ansible/secrets.enc
 /notes/*
 docker/secrets/aws-credentials.yml
 docker/secrets/aws-credentials.yml.enc
