--- a/contrib/dev/ansible/roles/appliance-dev/tasks/main.yml
+++ b/contrib/dev/ansible/roles/appliance-dev/tasks/main.yml
@@ -1,6 +1,3 @@
-# Install tools that are for development.  Tools that are useful
-# for production debugging and maintenance should be installed by the
-# misc-packages role.
 - name: Install useful dev tools
   register: result
   until: result is success
@@ -8,6 +5,7 @@
     name:
       - golang-go
       - net-tools
+      - ruby3.0
       - jq
     state: latest
 
@@ -21,6 +19,22 @@
     owner: root
     group: root
     mode: "0755"
+
+- name: Generate shared secret
+  vars:
+    secret_file: "{{ct_etc_dir}}/secret"
+  block:
+    - name: Create secret
+      ansible.builtin.shell:
+        cmd: |
+          ruby -r securerandom -e 'puts SecureRandom.hex(64)' > {{secret_file}}
+
+    - name: Ensure {{app_user}} can read file
+      ansible.builtin.file:
+        path: "{{secret_file}}"
+        owner: root
+        group: "{{app_user}}"
+        mode: "640"
 
 - name: Install Node
   include_tasks: install_node.yml
