--- a/contrib/dev/vagrant/Vagrantfile
+++ b/contrib/dev/vagrant/Vagrantfile
@@ -106,7 +106,7 @@ Vagrant.configure("2") do |config|
           type: "shell",
           run: "never",
           inline: <<-SH
-            AWS_ACCESS_KEY_ID=#{ENV.fetch('AWS_ACCESS_KEY_ID', '')} AWS_SECRET_ACCESS_KEY=#{ENV.fetch('AWS_SECRET_ACCESS_KEY', '')} /vagrant/scripts/run-dev-playbook.sh
+            /vagrant/scripts/run-dev-playbook.sh
           SH
         v.vm.provision "run_prod_playbook",
           type: "shell",
