--- a/contrib/dev/vagrant/Vagrantfile
+++ b/contrib/dev/vagrant/Vagrantfile
@@ -22,10 +22,6 @@ MACHINES = [
     name: "dev2",
     box: "ubuntu/jammy64",
   },
-  {
-    name: "asset-build",
-    box: "ubuntu/jammy64",
-  }
 ]
 
 Vagrant.configure("2") do |config|
@@ -67,55 +63,53 @@ Vagrant.configure("2") do |config|
         inline: "apt-get -y update && apt-get -y upgrade",
         run: "never"
 
-      unless to_boolean(ENV['ACCEPTANCE'])
-        if ENV['BUILD_ENV'] == 'prod'
-          v.vm.synced_folder PROD_ANSIBLE_DIR, "/ansible-prod"
-        else
-          v.vm.synced_folder DEV_ANSIBLE_DIR, "/ansible-dev"
-          if File.directory?(CT_SRC_DIR)
-            v.vm.synced_folder CT_SRC_DIR, "/opt/concertim/dev"
-          end
+      if ENV['BUILD_ENV'] == 'prod'
+        v.vm.synced_folder PROD_ANSIBLE_DIR, "/ansible-prod"
+      else
+        v.vm.synced_folder DEV_ANSIBLE_DIR, "/ansible-dev"
+        if File.directory?(CT_SRC_DIR)
+          v.vm.synced_folder CT_SRC_DIR, "/opt/concertim/dev"
         end
-
-        if Vagrant.has_plugin?("vagrant-notify-forwarder")
-          # Notify forwarder forwards notifications for file system changes.
-          # This enables quick dev reloading in rails apps and air.
-          v.notify_forwarder.port = 22021
-        else
-          $stderr.puts <<~EOF
-          WARNING: vagrant-notify-forwarder is not installed.
-
-          Run the following for a much better development experience.
-
-          vagrant plugin install vagrant-notify-forwarder
-
-          EOF
-        end
-
-        # Build the VM in the same was as the ansible README instructions
-        # state.  These are only available when `ACCEPTANCE` has not been defined.
-        v.vm.provision "install_ansible",
-          type: "shell",
-          run: "never",
-          path: "scripts/install-ansible.sh"
-        v.vm.provision "install_docker",
-          type: "shell",
-          run: "never",
-          path: "scripts/install-docker.sh"
-        v.vm.provision "run_dev_playbook",
-          type: "shell",
-          run: "never",
-          inline: <<-SH
-            /vagrant/scripts/run-dev-playbook.sh
-          SH
-        v.vm.provision "run_prod_playbook",
-          type: "shell",
-          run: "never",
-          inline: <<-SH
-            GH_TOKEN=#{ENV.fetch('GH_TOKEN', '')} /vagrant/scripts/run-prod-playbook.sh
-          SH
-
       end
+
+      if Vagrant.has_plugin?("vagrant-notify-forwarder")
+        # Notify forwarder forwards notifications for file system changes.
+        # This enables quick dev reloading in rails apps and air.
+        v.notify_forwarder.port = 22021
+      else
+        $stderr.puts <<~EOF
+        WARNING: vagrant-notify-forwarder is not installed.
+
+        Run the following for a much better development experience.
+
+        vagrant plugin install vagrant-notify-forwarder
+
+        EOF
+      end
+
+      # Build the VM in the same was as the ansible README instructions
+      # state.
+      v.vm.provision "install_ansible",
+        type: "shell",
+        run: "never",
+        path: "scripts/install-ansible.sh"
+      v.vm.provision "install_docker",
+        type: "shell",
+        run: "never",
+        path: "scripts/install-docker.sh"
+      v.vm.provision "run_dev_playbook",
+        type: "shell",
+        run: "never",
+        inline: <<-SH
+          /vagrant/scripts/run-dev-playbook.sh
+        SH
+      v.vm.provision "run_prod_playbook",
+        type: "shell",
+        run: "never",
+        inline: <<-SH
+          GH_TOKEN=#{ENV.fetch('GH_TOKEN', '')} /vagrant/scripts/run-prod-playbook.sh
+        SH
+
     end
   end
 end
