--- a/contrib/dev/vagrant/Vagrantfile
+++ b/contrib/dev/vagrant/Vagrantfile
@@ -27,12 +27,13 @@ MACHINES = [
 Vagrant.configure("2") do |config|
   MACHINES.each_with_index do |box, idx|
     config.vm.provider "virtualbox" do |v|
-      # v.memory = 8192
-      # v.memory = 4096
-      # v.memory = 3072
-      # v.memory = 2048
-      # v.memory = 1024
-      v.memory = 512
+      if ENV['BOX_MEM'].to_i != 0
+        v.memory = ENV['BOX_MEM'].to_i
+      elsif ENV['BUILD_ENV'] == 'prod'
+        v.memory = 512
+      else
+        v.memory = 1024
+      end
     end
 
     config.vm.define box[:name], primary: idx == 0 do |v|
