Remove create credentials step from dev setup

--- a/contrib/dev/ansible/roles/appliance-dev/tasks/nginx_dev_configuration.yml
+++ b/contrib/dev/ansible/roles/appliance-dev/tasks/nginx_dev_configuration.yml
@@ -6,6 +6,8 @@
       if [ ! -f {{document_root}} -a -f {{document_root}}.disabled ] ; then
         # Looks like we've already ran this.
         :
+      elif [ ! -f {{document_root}} ] ; then
+        echo "/etc/nginx/snippets/server-https.d/document-root.conf not found. Unable to disable"
       else
         mv {{document_root}} {{document_root}}.disabled
       fi
