Fix issue installing ansible
Ansible have published a broken package to their PPA.  See
https://github.com/ansible-collections/netapp.ontap/issues/190.  This
does not install anymore.  That issue is worked around by:

* Using official Ubuntu package not the PPA version ansible.
* Installing python library dependency: `python3-docker`.
* Removing now unsupported option `single_branch`.

--- a/ansible/roles/cluster_builder/tasks/main.yaml
+++ b/ansible/roles/cluster_builder/tasks/main.yaml
@@ -3,7 +3,7 @@
   ansible.builtin.git:
     repo: "{{cluster_builder.source.repo}}"
     dest: "{{cluster_builder.install_dir}}"
-    single_branch: yes
+    # single_branch: yes
     version: "{{cluster_builder.source.commitish}}"
   environment:
     GIT_TERMINAL_PROMPT: 0
