Fix default values and building docker images
Not sure why `| default('')` wasn't working.  I'm sure it was at some
point.  It could be related to downgrading ansible?  Anyway, we use an
alternative method for setting default values.

--- a/ansible/tasks/build_docker_image.yaml
+++ b/ansible/tasks/build_docker_image.yaml
@@ -1,9 +1,9 @@
 - name: Build docker image
   vars:
-    default_build_version: "{{ lookup('vars', component + '_facts_git_tag') | default('') }}"
-    default_build_revision: "{{ lookup('vars', component + '_facts_git_sha') | default('') }}"
-    default_docker_image_tag: "{{ lookup('vars', component + '_facts_docker_image_tag') | default('') }}"
-    default_name: "{{lookup('vars', component).docker_image.name}}"
+    default_build_version: "{{ lookup('vars', component + '_facts_git_tag', default='') }}"
+    default_build_revision: "{{ lookup('vars', component + '_facts_git_sha', default='') }}"
+    default_docker_image_tag: "{{ lookup('vars', component + '_facts_docker_image_tag', default='') }}"
+    default_name: "{{lookup('vars', component).docker_image.name | default(omit)}}"
     default_dockerfile: "{{lookup('vars', component).docker_image.dockerfile | default('Dockerfile')}}"
   community.docker.docker_image:
     name: "{{ name | default(default_name) }}"
