Optionally install killbill
Trying to integrate this into the same docker compose file as the
concertim services ran into some network related issues.  Using both
`network_mode: host` and bridged networks in the same docker compose
file doesn't work.

I could have killbill run with `network_mode: host` too, but both the
killbill and kaui servers bind to port `8080`.  I cannot find an easy
mechanism to change that, though I suspect that one must be available.

The solution is to have a separate docker compose project at
`/opt/concertim/opt/killbill`.  Starting and stopping both the concertim
services and the killbill services now requires the user to run multiple
`docker compose` commands.  This is easily resolved with our own wrapper
scripts, but they have not yet been written.

Also, beef up the vagrant machine when running the production ansible
playbook. Killbill just needs more.

--- a/ansible/etc/globals.yaml
+++ b/ansible/etc/globals.yaml
@@ -18,6 +18,10 @@ enable_cluster_builder: yes
 # installed and enabled.
 enable_openstack_service: yes
 
+# If the killbill component is enabled, the killbill, kaui and killbill_db
+# components will be installed and enabled.
+enable_killbill: yes
+
 # ==================================================
 # Host Ports and Interfaces
 # ==================================================
@@ -73,3 +77,15 @@ db_interface: 127.0.0.1
 # listen to HTTP requests on.
 # Use 0.0.0.0 to listen on all interfaces.
 api_server_interface: 127.0.0.1
+
+# The port that the killbill service should listen on.
+killbill_port: 48080
+# The interface that the killbill service should listen on.
+# Use 0.0.0.0 to listen on all interfaces.
+killbill_interface: 0.0.0.0
+
+# The port that the killbill service should listen on.
+kaui_port: 49090
+# The interface that the killbill service should listen on.
+# Use 0.0.0.0 to listen on all interfaces.
+kaui_interface: 0.0.0.0
