--- a/ansible/roles/openstack_service/tasks/main.yaml
+++ b/ansible/roles/openstack_service/tasks/main.yaml
@@ -46,11 +46,27 @@
       group: root
       mode: "755"
 
-- name: Copy openstack service config files
+- name: Copy example openstack service config file
   ansible.builtin.copy:
     src: "{{openstack_service.install_dir}}/etc/config-sample.yaml"
     remote_src: true
     dest: "{{ct_etc_dir}}/openstack-service/config.yaml"
+    force: false
+
+- name: Update openstack service config file
+  ansible.builtin.replace:
+    path: "{{ct_etc_dir}}/openstack-service/config.yaml"
+    regexp: "{{item.regexp}}"
+    replace: "{{item.replace}}"
+  loop:
+    - regexp: '^(\s*concertim_url:\s*)"https://host.concertim"'
+      replace: '\1"https://{{proxy_hostname}}:{{proxy_https_port}}"'
+    - regexp: '^(\s*concertim_password:\s*)"password"'
+      replace: '\1"admin"'
+    - regexp: '^(\s*api_host:\s*)"http://host.killbill:8080"'
+      replace: '\1"http://{{killbill_hostname}}:{{killbill_port}}"'
+  notify:
+    - "Stop openstack_service containers"
 
 - name: Set git checkout and docker image facts
   vars:
