enable websockets for dev visualiser

--- a/contrib/dev/ansible/roles/appliance-dev/tasks/setup_dev_ct_vis_app.yml
+++ b/contrib/dev/ansible/roles/appliance-dev/tasks/setup_dev_ct_vis_app.yml
@@ -9,13 +9,13 @@
       - build-essential
       - libpq-dev
       - libyaml-dev
+      - redis-server
 
 - name: Check for dev installation
   ansible.builtin.command:
     cmd: ls -d {{dev_root_dir}}/ct-visualisation-app
   register: dev_ct_vis_dir
   failed_when: False
-
 
 - name: Bundle install gems for dev ct-visualisation-app
   ansible.builtin.shell: |
