--- a/contrib/dev/ansible/roles/webserver/templates/nginx/snippets/server-https.d/zzz-ct-visualisation-app.conf
+++ b/contrib/dev/ansible/roles/webserver/templates/nginx/snippets/server-https.d/zzz-ct-visualisation-app.conf
@@ -7,3 +7,12 @@ location ^~ / {
   proxy_pass_request_headers on;
   include /etc/nginx/proxy_params;
 }
+
+location ^~ /cable {
+  proxy_pass http://{{visualisation_host}}:7000/cable;
+  proxy_http_version 1.1;
+  proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+  proxy_set_header Host $http_host;
+  proxy_set_header Upgrade $http_upgrade;
+  proxy_set_header Connection "Upgrade";
+}
