--- a/ansible/roles/proxy/templates/default.conf
+++ b/ansible/roles/proxy/templates/default.conf
@@ -1,7 +1,7 @@
 {% if proxy_http_port -%}
 server {
-  listen 80 default_server;
-  listen [::]:80 default_server;
+  listen {{proxy_http_port}} default_server;
+  listen [::]:{{proxy_http_port}} default_server;
 
   # Redirect all traffic to HTTPS.
   {% if proxy_https_port == 443 -%}
