--- a/ansible/roles/killbill/templates/docker-compose.yml
+++ b/ansible/roles/killbill/templates/docker-compose.yml
@@ -7,8 +7,8 @@ services:
     ports:
       - "{{killbill_interface}}:{{killbill_port}}:8080"
     environment:
-      - KILLBILL_DAO_URL=jdbc:mysql://db:3306/killbill
-      - KILLBILL_DAO_USER=root
+      - KILLBILL_DAO_URL=jdbc:postgresql://db:5432/killbill
+      - KILLBILL_DAO_USER=postgres
       - KILLBILL_DAO_PASSWORD=killbill
       - KILLBILL_CATALOG_URI=SpyCarAdvanced.xml
   kaui:
@@ -16,17 +16,18 @@ services:
     ports:
       - "{{kaui_interface}}:{{kaui_port}}:8080"
     environment:
-      - KAUI_CONFIG_DAO_URL=jdbc:mysql://db:3306/kaui
-      - KAUI_CONFIG_DAO_USER=root
+      - KAUI_DB_ADAPTER=postgresql
+      - KAUI_CONFIG_DAO_URL=jdbc:postgresql://db:5432/kaui
+      - KAUI_CONFIG_DAO_USER=postgres
       - KAUI_CONFIG_DAO_PASSWORD=killbill
       - KAUI_KILLBILL_URL=http://killbill:8080
   db:
-    image: killbill/mariadb:0.24
+    image: killbill/postgresql:0.24
     volumes:
       - type: volume
         source: db
-        target: /var/lib/mysql
+        target: /var/lib/postgresql/data
     expose:
-      - "3306"
+      - "5432"
     environment:
-      - MYSQL_ROOT_PASSWORD=killbill
+      - POSTGRES_PASSWORD=killbill
