Use `extra_hosts` setting in docker compose file
This allows me to rework confusing documentation; replaces several
`localhost` settings in config files with the name of the service.  Will
ease both a migration back to `network_mode: bridged` and also to having
the containers deployed on separate machines.

--- a/ansible/roles/metric_reporting_daemon/templates/config.yml
+++ b/ansible/roles/metric_reporting_daemon/templates/config.yml
@@ -123,12 +123,12 @@ retrieval:
 # API.
 visualizer_api:
   # The URL used for gaining an authentication token.
-  auth_url: "http://{{visualisation_app_hostname}}:{{visualisation_app_port}}/users/sign_in.json"
+  auth_url: "http://visualisation:{{visualisation_app_port}}/users/sign_in.json"
   # The authentication credentials.
   username: "admin"
   password: "admin"
   # The URL used to obtain the data source maps.
-  data_source_map_url: "http://{{visualisation_app_hostname}}:{{visualisation_app_port}}/api/v1/data-source-maps"
+  data_source_map_url: "http://visualisation:{{visualisation_app_port}}/api/v1/data-source-maps"
   # If set to true skip all TLS certificate verification checks.
   skip_certificate_check: true
 
