--- a/ansible/roles/openstack_service/tasks/main.yaml
+++ b/ansible/roles/openstack_service/tasks/main.yaml
@@ -60,11 +60,11 @@
     replace: "{{item.replace}}"
   loop:
     - regexp: '^(\s*concertim_url:\s*)"https://host.concertim"'
-      replace: '\1"https://{{proxy_hostname}}:{{proxy_https_port}}"'
+      replace: '\1"https://proxy:{{proxy_https_port}}"'
     - regexp: '^(\s*concertim_password:\s*)"password"'
       replace: '\1"admin"'
     - regexp: '^(\s*api_host:\s*)"http://host.killbill:8080"'
-      replace: '\1"http://{{killbill_hostname}}:{{killbill_port}}"'
+      replace: '\1"http://killbill:{{killbill_port}}"'
     - regexp: '^(\s*apikey:\s*)"key"'
       replace: '\1"{{ killbill_apikey | default("key") }}"'
     - regexp: '^(\s*apisecret:\s*)"secret"'
