--- a/ansible/roles/proxy/templates/default.conf
+++ b/ansible/roles/proxy/templates/default.conf
@@ -41,7 +41,7 @@ server {
   }
 
   location ^~ /mrd/ {
-	  proxy_pass http://{{metric_reporting_daemon_hostname}}:{{metric_reporting_daemon_api_port}}/;
+	  proxy_pass http://metric_reporting_daemon:{{metric_reporting_daemon_api_port}}/;
 	  proxy_pass_request_headers on;
 	  include /etc/nginx/proxy_params;
   }
@@ -50,7 +50,7 @@ server {
   # ct-visualisation-app.  If a request should be handled differently, that
   # handling needs to be defined before this.
   location ^~ / {
-	  proxy_pass http://{{visualisation_app_hostname}}:{{visualisation_app_port}}/;
+	  proxy_pass http://visualisation:{{visualisation_app_port}}/;
 	  proxy_pass_request_headers on;
 	  include /etc/nginx/proxy_params;
   }
