Install Concertim OpenStack billing service
Also, attempt to maintain sanity by consistently using `lstrip_blocks:
yes` when rendering jinja2 templates and moving jinja tags to first
character on line.

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -94,6 +94,7 @@
       ansible.builtin.template:
         src: docker-compose.yml
         dest: "{{ct_docker_dir}}/"
+        lstrip_blocks: yes
 
 # Run any tasks that need to run after all of the containers and the docker
 # compose configuration is in place.  E.g., migrating databases.
@@ -109,7 +110,7 @@
       tags: concertim
       when: enable_concertim | bool
 
-- name: Start Alces Concertim components
+- name: Start Alces Concertim components and infrastructure
   hosts: all
   become: true
   become_user: root
@@ -118,16 +119,6 @@
     # Ensure all services are up.  If any needed restarting they will have been
     # downed in the previous plays, all that needs to happen here is ensure
     # they're up.
-    - name: Start concertim services
-      tags:
-        - concertim
-        - cluster_builder
-        - openstack_service
-      when: (enable_concertim | bool) or (enable_cluster_builder | bool) or (enable_openstack_service | bool)
-      ansible.builtin.shell:
-        chdir: "{{ct_docker_dir}}"
-        cmd: |
-          docker compose up --detach
 
     - name: Start killbill
       tags: killbill
@@ -136,3 +127,32 @@
         chdir: "{{ct_installation_dir}}/killbill"
         cmd: |
           docker compose up --detach
+
+    - tags:
+        - concertim
+        - cluster_builder
+        - openstack_service
+      when: (enable_concertim | bool) or (enable_cluster_builder | bool) or (enable_openstack_service | bool)
+      block:
+        # There is an order of initialisation issue where some
+        # concertim-openstack-service containers will exit if visualisation is
+        # not accepting connections when they start.  We work around that here,
+        # but it should be fixed upstream.
+      - name: Start concertim visualisation service
+        ansible.builtin.shell:
+          chdir: "{{ct_docker_dir}}"
+          cmd: |
+            docker compose up --detach visualisation
+
+      - name: Wait for visualisation container
+        ansible.builtin.wait_for:
+          port: "{{visualisation_app_port}}"
+          delay: 1
+          timeout: 10
+          msg: "Timed out waiting for visualisation port {{visualisation_app_port}} to become open on the host"
+
+      - name: Start concertim services
+        ansible.builtin.shell:
+          chdir: "{{ct_docker_dir}}"
+          cmd: |
+            docker compose up --detach
