--- a/ansible/roles/openstack_service/handlers/main.yaml
+++ b/ansible/roles/openstack_service/handlers/main.yaml
@@ -2,4 +2,4 @@
   ansible.builtin.shell:
     chdir: "{{ct_docker_dir}}"
     cmd: |
-      docker compose down api_server bulk_updates mq_listener metrics
+      docker compose down api_server billing bulk_updates mq_listener metrics
