--- a/ansible/roles/proxy/templates/default.conf
+++ b/ansible/roles/proxy/templates/default.conf
@@ -1,14 +1,14 @@
-{% if proxy_http_port -%}
+{% if proxy_http_port %}
 server {
   listen {{proxy_http_port}} default_server;
   listen [::]:{{proxy_http_port}} default_server;
 
   # Redirect all traffic to HTTPS.
-  {% if proxy_https_port == 443 -%}
+{% if proxy_https_port == 443 %}
   return 307 https://$host$request_uri;
-  {% else -%}
+{% else %}
   return 307 https://$host:{{proxy_https_port}}$request_uri;
-  {% endif %}
+{% endif %}
 }
 {% endif %}
 
