--- a/ansible/templates/docker-compose.yml
+++ b/ansible/templates/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.3"
 name: concertim
 services:
-  {% if enable_concertim -%}
+{% if enable_concertim %}
   visualisation:
     image: concertim-visualisation-app:{{visualisation_app_facts_docker_image_tag}}
     volumes:
@@ -19,6 +19,7 @@ services:
       - PORT={{visualisation_app_port}}
     depends_on:
       - db
+      - proxy
     ports:
       - "{{visualisation_app_interface}}:{{visualisation_app_port}}:{{visualisation_app_port}}"
     network_mode: host
@@ -43,19 +44,18 @@ services:
     network_mode: host
     extra_hosts:
       - "visualisation:{{visualisation_app_ip}}"
+    depends_on:
+      - proxy
 
   proxy:
     image: concertim-proxy
     ports:
-      {% if proxy_http_port -%}
+{%    if proxy_http_port %}
       - "{{proxy_http_interface}}:{{proxy_http_port}}:{{proxy_http_port}}"
-      {% endif -%}
+{%    endif %}
       - "{{proxy_https_interface}}:{{proxy_https_port}}:{{proxy_https_port}}"
     volumes:
       - static-content:{{static_content_mount}}
-    depends_on:
-      - visualisation
-      - metric_reporting_daemon
     network_mode: host
     extra_hosts:
       - "metric_reporting_daemon:{{metric_reporting_daemon_ip}}"
@@ -79,9 +79,9 @@ services:
       timeout: 5s
       retries: 5
     network_mode: host
-  {% endif %}
+{% endif %}
 
-  {% if enable_cluster_builder -%}
+{% if enable_cluster_builder %}
   cluster_builder: 
     image: concertim-cluster-builder:{{cluster_builder_facts_docker_image_tag}}
     # flask requires SIGINT to stop gracefully
@@ -95,13 +95,24 @@ services:
     volumes:
       - "{{ct_cluster_builder_share_dir}}/:/app/instance"
     network_mode: host
-  {% endif %}
+{% endif %}
 
-  {% if enable_openstack_service -%}
+{% if enable_openstack_service %}
   api_server:
     image: concertim-api-server:{{openstack_service_facts_docker_image_tag}}
     ports:
       - "{{api_server_interface}}:42356:42356"
+    volumes:
+      - "{{ct_etc_dir}}/openstack-service/config.yaml:/etc/concertim-openstack-service/config.yaml"
+      - "{{ct_log_dir}}/openstack-service/:/app/var/log/"
+      - "{{ct_openstack_service_data_dir}}:/app/var/data/"
+    network_mode: host
+    extra_hosts:
+      - "proxy:{{proxy_ip}}"
+      - "killbill:{{killbill_ip}}"
+
+  billing:
+    image: concertim-billing:{{openstack_service_facts_docker_image_tag}}
     volumes:
       - "{{ct_etc_dir}}/openstack-service/config.yaml:/etc/concertim-openstack-service/config.yaml"
       - "{{ct_log_dir}}/openstack-service/:/app/var/log/"
@@ -142,9 +153,9 @@ services:
     network_mode: host
     extra_hosts:
       - "proxy:{{proxy_ip}}"
-  {% endif %}
+{% endif %}
 
-{% if enable_concertim -%}
+{% if enable_concertim %}
 volumes:
   db-data:
   rrd-data:
