vis-app dev container serves its own assets

--- a/ansible/roles/proxy/templates/default.conf
+++ b/ansible/roles/proxy/templates/default.conf
@@ -29,10 +29,12 @@ server {
 
   root {{static_content_mount}};
 
+# BEGIN ANSIBLE MANAGED BLOCK location assets
   location ^~ /assets/ {
 	  # The default behaviour is to serve the files from the configured root, which
 	  # is exactly what we want here.
   }
+# END ANSIBLE MANAGED BLOCK location assets
 
   location ^~ /sys/date {
 	  rewrite ^/sys/date$ /sys/date_responder.php;
