--- a/ansible/dev-containers.yml
+++ b/ansible/dev-containers.yml
@@ -31,6 +31,12 @@
         cmd: |
           docker compose -f docker-compose.yml down
 
+    - name: Proxy no longer serves assets
+      ansible.builtin.blockinfile:
+        path: "{{proxy.install_dir}}/nginx/conf.d/default.conf"
+        marker: "# {mark} ANSIBLE MANAGED BLOCK location assets"
+        block: ""
+
     # We need the target with go and other useful programs installed.  Not the
     # minimal target containing just the compiled binary.
     - name: Rebuild metric reporting daemon image
