--- a/ansible/roles/proxy/templates/default.conf
+++ b/ansible/roles/proxy/templates/default.conf
@@ -56,7 +56,7 @@ server {
   }
 
   location ^~ /cable {
-      proxy_pass http://{{visualisation_app_hostname}}:{{visualisation_app_port}}/cable;
+      proxy_pass http://visualisation:{{visualisation_app_port}}/cable;
       proxy_http_version 1.1;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header Host $http_host;
