--- a/contrib/dev/ansible/roles/appliance-dev/tasks/setup_dev_metric_daemon.yml
+++ b/contrib/dev/ansible/roles/appliance-dev/tasks/setup_dev_metric_daemon.yml
@@ -1,3 +1,12 @@
+- name: Install dependencies
+  register: result
+  until: result is success
+  ansible.builtin.apt:
+    name:
+      - golang-go
+      - rrdtool
+    state: latest
+
 - name: Workaround git and vboxfs issue
   ansible.builtin.command:
     cmd: git config --global --add safe.directory /opt/concertim/dev/ct-metric-reporting-daemon
